--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -155,7 +155,8 @@
 }
 
 .gallery-page__breakpoints,
-.blog-page__breakpoints {
+.blog-page__breakpoints,
+.post-page__breakpoints {
     background-color: #dfdfdf;
     padding-top: 13px;
     padding-bottom: 14px;
