header was completed

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,7 @@
         padding-top: 45px;
         padding-bottom: 45px;
         position: relative;
+        background-color: none;
     }
     &__btn {
         background-color: transparent;
