--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -11,6 +11,10 @@
             display: none;
         }
     }
+    .rightside-menu {
+        display: none;
+        // transform: translateX(4000px);
+    }
     .menu {
         &__item-list {
             padding-left: 0;
@@ -23,8 +27,31 @@
 
 @media (max-width: 540px) {
     .header {
+        box-shadow: none;
+        &__inner {
+            padding-top: 20px;
+            position: relative;
+            // z-index: -10;
+            // padding-bottom: 30px;
+            &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 80px;
+                background-color: #fff;
+                z-index: 23;
+                // box-shadow: ;
+                box-shadow: 0 2px 4px -2px rgba(#000, 0.25);
+            }
+        }
+        .container {
+            padding: 0;
+        }
         &__inner {
             flex-wrap: wrap;
+            position: relative;
         }
         &__btn-menu {
             position: relative;
@@ -33,8 +60,13 @@
             border: none;
             cursor: pointer;
             order: -1;
+            z-index: 25;
+
+            padding-top: 5px;
+            padding-right: 15px;
+
             span {
-                background-color: #000;
+                background-color: $default-color;
                 width: 37px;
                 height: 3px;
                 display: block;
@@ -45,20 +77,33 @@
     }
     .menu {
         display: block;
+        // position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         z-index: 20;
-        transform: translateY(-310px);
+        transform: translateY(-400px);
         position: relative;
         background-color: #fff;
-        transition: all 0.6s;
+        transition: all 1s;
 
         &--open {
-            transform: translateY(0px);
+            z-index: 22;
+
+            transition: transform 1s;
+            transform: translateY(20px);
+            // background-color: #fff;
         }
 
         &__items {
             width: 100%;
             display: block;
+            border-bottom: 1px solid #5a5a5a50;
+            box-shadow: 0 2px 4px -2px rgba(#000, 0.25);
+
+            &--1 {
+                border-bottom: none;
+            }
         }
         &__item-list {
             padding: 10px 0px;
@@ -68,10 +113,26 @@
         }
         &__list-link {
             width: 100%;
+            padding: 10px 0;
+            display: inline-block;
+            &:hover::after {
+                display: none;
+            }
         }
     }
-    .logo-link {
+    .logo {
+        padding-left: 15px;
+        z-index: 25;
+
         margin: 0;
+        padding-top: 5px;
         order: -1;
+    }
+    .main {
+        margin-top: -342px;
+        z-index: 20;
+        &--class {
+            z-index: 19;
+        }
     }
 }
