--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -4,7 +4,63 @@
 //         // transform: translateX(4000px);
 //     }
 // }
-
+@media (max-width: 920px) {
+    .footer {
+        &__inner {
+            // flex-direction: column;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: flex-start;
+            padding-bottom: 20px;
+        }
+        &__info {
+            margin: 0 auto;
+            width: 65%;
+        }
+        &__form {
+            max-width: 500px;
+        }
+        &__social {
+            width: 20%;
+            margin: 40px auto 0;
+            padding: 0 20px;
+        }
+        &__menu {
+            margin: 20px auto 0;
+            padding: 0 20px;
+            flex-direction: column;
+            width: 100%;
+        }
+        &__menu-items {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        &__menu-item {
+            padding: 0 20px;
+        }
+    }
+}
+@media (max-width: 700px) {
+    .footer {
+        &__info {
+            margin: 0 auto;
+            width: 90%;
+        }
+        &__social {
+            width: 100%;
+            padding: 0 20px;
+        }
+        &__social-list {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        &__social-item {
+            padding-right: 20px;
+        }
+    }
+}
 @media (max-width: 768px) {
     .header {
         &__btn {
@@ -129,10 +185,30 @@
         order: -1;
     }
     .main {
-        margin-top: -342px;
+        margin-top: -302px;
         z-index: 20;
         &--class {
             z-index: 19;
+        }
+    }
+    .footer {
+        &__form {
+            flex-direction: column;
+        }
+
+        &__form-btn {
+            margin-top: 10px;
+            margin-left: 0;
+            width: 100%;
+        }
+    }
+}
+@media (max-width: 400px) {
+    .footer {
+        &__menu-items {
+            flex-wrap: nowrap;
+            flex-direction: column;
+            text-align: center;
         }
     }
 }
