--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -102,10 +102,14 @@
     position: fixed;
     top: 0;
     transform: translateX(50%);
+    visibility: visible;
+    opacity: 1;
 
     &--close {
         transition: all 1s;
         transform: translateX(2000px);
+        visibility: hidden;
+        opacity: 0;
     }
 
     &__btn-close {
@@ -176,7 +180,7 @@
     background-repeat: no-repeat;
     position: relative;
     height: 607px;
-    z-index: -10;
+    // z-index: -10;
     margin-bottom: 80px;
 
     &__left {
@@ -189,8 +193,10 @@
         position: absolute;
         top: 70px;
         left: 110px;
-        width: 400px;
-        height: 600px;
+        width: 100%;
+        height: 100%;
+        max-width: 400px;
+        max-height: 600px;
         background-color: rgb(241, 209, 82);
         z-index: -3;
     }
@@ -262,7 +268,8 @@
     &__content {
         text-align: center;
         margin: 0 auto;
-        width: 730px;
+        width: 100%;
+        max-width: 730px;
         margin-top: 40px;
         margin-bottom: 24px;
     }
@@ -294,6 +301,7 @@
     &__slide {
         position: relative;
         outline: none;
+        margin: 0 10px;
         &:hover .about__slide-content {
             opacity: 0.6;
         }
@@ -364,7 +372,8 @@
     }
     &__text {
         color: $title-color;
-        width: 540px;
+        width: 100%;
+        max-width: 540px;
         opacity: 1;
     }
 }
@@ -387,7 +396,8 @@
             position: absolute;
             top: 50%;
             left: 0;
-            width: 1110px;
+            width: 100%;
+            max-width: 1110px;
             height: 2px;
             background-color: #363838;
         }
@@ -452,7 +462,7 @@
         }
     }
     &__step-title-4 {
-        text-align: right !important;
+        text-align: right;
         &::before {
             content: "";
             background-image: url(../images/home/delivery.svg);
@@ -570,7 +580,8 @@
         font-size: 36px;
         text-align: center;
         color: $title-color;
-        width: 450px;
+        width: 100%;
+        max-width: 450px;
         margin: 0 auto;
         padding-bottom: 30px;
     }
